# axum-autoroute

./: .gitattributes  .gitignore  Cargo.toml  README.md  deny.toml  rustfmt.toml
.github/workflows/: rust.yml
example/: Cargo.toml  README.md  openapi.json
example/refs/openapi/: body_json.openapi.json  body_multipart.openapi.json  body_raw.openapi.json  custom_extractor.openapi.json  hello.openapi.json  hello.openapi.private.json  params_path.openapi.json  params_query.openapi.json  response_cookie.openapi.json  response_file.openapi.json  response_json.openapi.json  state.openapi.json
example/refs/tracing/: body_json.traces  body_multipart.traces  body_raw.traces  custom_body_extractor.traces  custom_query_extractor.traces  hello.traces  multi_path_extractors.traces  path_params_even.traces  query_params1.traces  query_params2.traces  query_params3.traces  response_cookie.traces  response_file_attachment.traces  response_file_inline.traces  response_json.traces  route_info1.traces  route_info2.traces  route_info3.traces  state_incr.traces  two_path_params.traces  two_path_params_reverse.traces
example/src/: lib.rs  main.rs  test_utils.rs
example/src/routes/: body_json.rs  body_multipart.rs  body_raw.rs  custom_extractor.rs  hello.rs  main_example.rs  mod.rs  params_path.rs  params_query.rs  response_cookie.rs  response_file.rs  response_json.rs  route_info.rs  state.rs
example/tests/: compile_errors.rs
example/tests/compile_errors/: 01_bad_item.rs  01_bad_item.stderr  02_bad_method.rs  02_bad_method.stderr  03_bad_field.rs  03_bad_field.stderr  04_bad_responses.rs  04_bad_responses.stderr  04a_bad_body_response.rs  04a_bad_body_response.stderr  04b_bad_body_response2.rs  04b_bad_body_response2.stderr  05_bad_return_type.rs  05_bad_return_type.stderr  bad_response_trait.rs  bad_response_trait.stderr  bad_tags.rs  bad_tags.stderr  extractor_attr.rs  extractor_attr.stderr  extractor_var_detection.rs  extractor_var_detection.stderr  unused_response.rs  unused_response.stderr
lib/: COPYRIGHT  Cargo.toml  README.md
lib/src/: lib.rs  prelude.rs  response.rs  route_info.rs  router.rs  status_trait.rs
macros/: Cargo.toml  README.md
macros/src/: macros.rs  macros_internal.rs
macros/src/args/: extractor_attr.rs  extractors.rs  mod.rs  responses.rs
macros/src/codegen/: mod.rs  responses.rs  route_info.rs  tracing.rs  trait_checkers.rs  trait_use.rs  utoipa.rs
macros/src/utils/: error.rs  http.rs  mime.rs  mod.rs  spanned.rs
scripts/: build.sh  checkOpenapiRefs.py  ci_test.sh  clippy.sh  doc.sh  fmt.sh  test.sh
