[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["macros", "lib", "example"]

[workspace.dependencies]
axum = { version = "0.8.4" }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-axum = { version = "0.2.0" }
tower = "0.5.2"
serde = "1.0.219"
mime = "0.3.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
