[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "Apache-2.0"
license-file = "LICENSE"
homepage = "https://github.com/Evolis-SA/axum-autoroute"
repository = "https://github.com/Evolis-SA/axum-autoroute"
categories = ["web-programming::http-server"]
keywords = ["rest-api", "openapi", "auto-generate", "documentation", "web", "http", "proc-macro", "axum", "utoipa"]

[workspace]
resolver = "3"
members = ["macros", "lib", "example"]

[workspace.dependencies]
axum = { version = "0.8.4" }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-axum = { version = "0.2.0" }
tower = "0.5.2"
serde = "1.0.219"
mime = "0.3.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
