[package]
name = "axum-autoroute-example"
description = "Example HTTP server using axum-autoroute."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false # example crate should never be published

[features]
default = []
debugging = ["axum-autoroute/debugging"]
tracing = ["axum-autoroute/tracing", "dep:tracing", "dep:tracing-subscriber"]

[dependencies]
axum-autoroute = { workspace = true, features = ["unstable_extractor_attr"] }

axum = { workspace = true, features = ["macros"] }
utoipa.workspace = true
utoipa-axum.workspace = true
tower.workspace = true
serde.workspace = true
mime.workspace = true

axum_typed_multipart = "0.16.2"
axum-extra = { version = "0.12.2", features = [
    "cookie",
    "attachment",
    "file-stream",
] }
utoipa-swagger-ui = { version = "9.0.1", features = ["axum", "vendored"] }
tokio = { version = "1.45.0", features = ["full"] }
serde_json = "1.0.140"

tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[dev-dependencies]
trybuild = "1.0.105"
common-multipart-rfc7578 = "0.7.0"
tracing-test = "0.2.5"
regex = "1.11.1"
rustversion = "1.0.22"
