[package]
name = "axum-autoroute"
description = "The goal of this crate is to integrate utoipa tightly with axum to enforce that for each REST route, the code and the openapi documentation are matching."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
publish = true

[features]
default = ["default_serializer_json"]
debugging = ["axum-autoroute-macros/debugging"]
tracing = ["axum-autoroute-macros/tracing"]
default_serializer_json = ["axum-autoroute-macros/default_serializer_json"]
unstable_extractor_attr = ["axum-autoroute-macros/unstable_extractor_attr"]

[dependencies]
axum-autoroute-macros.workspace = true
axum.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
tower.workspace = true
pastey = "0.2.0"

[dev-dependencies]
serde.workspace = true
tracing.workspace = true
