[package]
name = "axum-autoroute-macros"
version = { workspace = true }
edition = { workspace = true }
publish = false

[lib]
path = "src/macros.rs"
proc-macro = true

[features]
default = []
debugging = []
tracing = []
default_serializer_json = []
unstable_extractor_attr = []

[dependencies]
axum = { workspace = true }
utoipa-axum = { workspace = true }
mime = { workspace = true }

proc-macro2 = "1.0.95"
syn = { version = "2.0.101", features = ["full"] }
quote = "1.0.40"
strum = { version = "0.27.1", features = ["derive"] }
convert_case = "0.10.0"
include-utils = "0.2.4"
